--- a/index.html
+++ b/index.html
@@ -1,78 +1,89 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="ko">
 
-    <title>KNOTI</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800" rel="stylesheet">
-    <link rel="stylesheet" href="../css/main.css">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <body>
-    <header id="header" class="header bg">
-      <div class="container text-white">
-        <div class="row">
+  <title>KNOTI</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800" rel="stylesheet">
+  <link rel="stylesheet" href="../css/main.css">
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <header id="header" class="header bg">
+    <div class="container text-white">
+      <div class="row">
         <div class="col-sm-12 col-12 align-self-center box-1 text-center">
-            <a class="navbar-brand" href="index.html">
-              <img class="m-logo" src="../image/knoti header.jpg" alt="logo">
-            </a>
+          <a class="navbar-brand" href="index.html">
+            <img class="m-logo" src="../image/knoti header.jpg" alt="logo">
+          </a>
         </div>
+      </div>
     </div>
-</div>
+  </header>
 
-    </header>
-    
-    
-    <!-- 네비게이션 -->
-  
-<ul class="nav justify-content-center">
-<li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="#">Active</a>
-</li>
-<li class="nav-item">
-  <a class="nav-link" href="#">Link</a>
-</li>
-<li class="nav-item">
-  <a class="nav-link" href="#">Link</a>
-</li>
-<li class="nav-item">
-  <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-</li>
-</ul>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- 네비게이션 -->
 
+  <nav id="nav">
+    <ul class="nav justify-content-center">
+      <li class="nav-item">
+        <a class="nav-link active">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link">Store</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link">Reserve</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link">Login</a>
+      </li>
+    </ul>
+  </nav>
 
-    <!-- Bootstrap JS CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js"></script>
-
-    <!--main 캐러셀-->
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-<div class="carousel-inner">
-  <div class="carousel-item active">
-    <img src="..." class="d-block w-100" alt="...">
+  <!--main 캐러셀-->
+  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="2000">
+        <img src="/image/bracelet/KakaoTalk_20251126_100557901_03.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+        <img src="/image/bracelet/KakaoTalk_20251126_100557901_04.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+        <img src="/image/bracelet/KakaoTalk_20251126_100557901_07.jpg" class="d-block w-100">
+      </div>
+    </div>
+    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button> -->
   </div>
-  <div class="carousel-item">
-    <img src="..." class="d-block w-100" alt="...">
-  </div>
-  <div class="carousel-item">
-    <img src="..." class="d-block w-100" alt="...">
-  </div>
-</div>
-<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-  <span class="visually-hidden">Previous</span>
-</button>
-<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-  <span class="visually-hidden">Next</span>
-</button>
-</div> 
 
-  </body>
-
+  <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/image/bracelet/KakaoTalk_20251126_100557901_03.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="/image/bracelet/KakaoTalk_20251126_100557901_04.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="/image/bracelet/KakaoTalk_20251126_100557901_07.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+  </div> -->
+</body>
 </html>
