--- a/index.html
+++ b/index.html
@@ -1,89 +1,60 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
-
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>knoti</title>
 
-  <title>KNOTI</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800" rel="stylesheet">
-  <link rel="stylesheet" href="../css/main.css">
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <link href="/css/main.css" rel="stylesheet">
 </head>
-
 <body>
-  <header id="header" class="header bg">
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-sm-12 col-12 align-self-center box-1 text-center">
-          <a class="navbar-brand" href="index.html">
-            <img class="m-logo" src="../image/knoti header.jpg" alt="logo">
-          </a>
+
+<!-- Logo -->
+<header id="header" class="border-bottom"></header>
+
+<!-- Navigation -->
+<nav id="nav" class="navbar navbar-expand bg-white fixed-top"></nav>
+
+<!-- Side Menu -->
+<div id="sideMenu" class="offcanvas offcanvas-start" tabindex="-1"></div>
+
+<!-- Sample Product Section -->
+<section class="py-5">
+  <div class="container">
+    <div id="mainCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3500">
+      <!-- indicator (하단 점) -->
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#mainCarousel" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#mainCarousel" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#mainCarousel" data-bs-slide-to="2"></button>
+      </div>
+
+      <!-- slide images -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/image/bracelet/KakaoTalk_20251126_100557901_03.jpg" class="d-block w-100" alt="slide1">
+        </div>
+        <div class="carousel-item">
+          <img src="/image/bracelet/KakaoTalk_20251126_100557901_04.jpg" class="d-block w-100" alt="slide2">
+        </div>
+        <div class="carousel-item">
+          <img src="/image/bracelet/KakaoTalk_20251126_100557901_05.jpg" class="d-block w-100" alt="slide3">
         </div>
       </div>
+
     </div>
-  </header>
-
-  <!-- 네비게이션 -->
-
-  <nav id="nav">
-    <ul class="nav justify-content-center">
-      <li class="nav-item">
-        <a class="nav-link active">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link">Store</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link">Reserve</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link">Login</a>
-      </li>
-    </ul>
-  </nav>
-
-  <!--main 캐러셀-->
-  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="2000">
-        <img src="/image/bracelet/KakaoTalk_20251126_100557901_03.jpg" class="d-block w-100">
-      </div>
-      <div class="carousel-item" data-bs-interval="2000">
-        <img src="/image/bracelet/KakaoTalk_20251126_100557901_04.jpg" class="d-block w-100">
-      </div>
-      <div class="carousel-item" data-bs-interval="2000">
-        <img src="/image/bracelet/KakaoTalk_20251126_100557901_07.jpg" class="d-block w-100">
-      </div>
-    </div>
-    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-      data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-      data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button> -->
   </div>
+</section>
 
-  <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="/image/bracelet/KakaoTalk_20251126_100557901_03.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="/image/bracelet/KakaoTalk_20251126_100557901_04.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="/image/bracelet/KakaoTalk_20251126_100557901_07.jpg" class="d-block w-100" alt="...">
-      </div>
-    </div>
-  </div> -->
+<footer id="footer" class="py-4 text-center"></footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<script src="js/include.js"></script>
+
 </body>
 </html>
