--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       <!-- slide images -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/image/bracelet/KakaoTalk_20251126_100557901_03.jpg" class="d-block w-100" alt="slide1">
+          <img src="/image/main/slide_1.png" class="d-block w-100" alt="slide1">
         </div>
         <div class="carousel-item">
-          <img src="/image/bracelet/KakaoTalk_20251126_100557901_04.jpg" class="d-block w-100" alt="slide2">
+          <img src="/image/main/slide_2.png" class="d-block w-100" alt="slide2">
         </div>
         <div class="carousel-item">
-          <img src="/image/bracelet/KakaoTalk_20251126_100557901_05.jpg" class="d-block w-100" alt="slide3">
+          <img src="/image/main/slide_3.png" class="d-block w-100" alt="slide3">
         </div>
       </div>
 
