--- a/index.html
+++ b/index.html
@@ -49,6 +49,159 @@
   </div>
 </section>
 
+<section class="py-5">
+  <div class="container">
+    <img class="main-banner w-100" src="/image/main/main_banner.jpg" alt="banner">
+  </div>
+</section>
+
+<section class="py-5">
+  <div class="container">
+    <div class="row g-4 text-center pb-5">
+      <h2>Best Item</h2>
+      <p class="h5 my-2 text-black-50">Bracelet</p>
+    </div>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card product-card">
+            <div class="product-img">
+              <img class="w-100" src="/image/bracelet/bracelet_1.png" alt="">
+            </div>
+            <div class="card-body">
+            <h5 class="card-title">빈티지 내츄럴 원석 산호 팔찌</h5>
+            <p class="card-text text-muted">₩7,900</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card product-card">
+            <div class="product-img">
+              <img class="w-100" src="/image/bracelet/bracelet_2.png" alt="">
+            </div>
+            <div class="card-body">
+            <h5 class="card-title">12월 원석 탄생석 매듭팔찌</h5>
+            <p class="card-text text-muted">₩5,400</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card product-card">
+            <div class="product-img">
+              <img class="w-100" src="/image/bracelet/bracelet_3.png" alt="">
+            </div>
+            <div class="card-body">
+            <h5 class="card-title">심지 점과 선 원석 매듭 끈 팔찌</h5>
+            <p class="card-text text-muted">₩6,700</p>
+            </div>
+        </div>
+      </div>
+    </div>
+    <div class="row g-4 text-center">
+      <p class="h6 view-more">
+        <a class="text-black-50" href="/components/store/bracelet.html">View More</a>
+      </p>
+    </div>
+  </div>
+</section>
+
+<section class="py-5">
+  <div class="container">
+    <div class="row g-4 text-center pb-5">
+      <h2>Best Item</h2>
+      <p class="h5 my-2 text-black-50">Necklace</p>
+    </div>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card product-card">
+            <div class="product-img">
+              <img class="w-100" src="/image/necklace/necklace_1.jpg" alt="">
+            </div>
+            <div class="card-body">
+            <h5 class="card-title">빈티지 별 목걸이</h5>
+            <p class="card-text text-muted">₩7,800</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card product-card">
+            <div class="product-img">
+              <img class="w-100" src="/image/necklace/necklace_2.jpg" alt="">
+            </div>
+            <div class="card-body">
+            <h5 class="card-title">블랙 믹스 스타 목걸이</h5>
+            <p class="card-text text-muted">₩13,500</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card product-card">
+            <div class="product-img">
+              <img class="w-100" src="/image/necklace/necklace_3.jpg" alt="">
+            </div>
+            <div class="card-body">
+            <h5 class="card-title">나비 펜던트 가죽 끈 목걸이</h5>
+            <p class="card-text text-muted">₩9,800</p>
+            </div>
+        </div>
+      </div>
+    </div>
+    <div class="row g-4 text-center">
+      <p class="h6 view-more">
+        <a class="text-black-50" href="/components/store/necklace.html">View More</a>
+      </p>
+    </div>
+  </div>
+</section>
+
+<section class="py-5">
+  <div class="container">
+    <div class="row g-4 text-center pb-5">
+      <h2>Best Item</h2>
+      <p class="h5 my-2 text-black-50">Keyring</p>
+    </div>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card product-card">
+            <div class="product-img">
+              <img class="w-100" src="/image/keyring/keyring_1.png" alt="">
+            </div>
+            <div class="card-body">
+            <h5 class="card-title">나비 써지컬 펜던트 원석 키링</h5>
+            <p class="card-text text-muted">₩7,600</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card product-card">
+            <div class="product-img">
+              <img class="w-100" src="/image/keyring/keyring_3.png" alt="">
+            </div>
+            <div class="card-body">
+            <h5 class="card-title">바다 비즈 원석 매듭팔찌 비즈 팔찌</h5>
+            <p class="card-text text-muted">₩8,400</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card product-card">
+            <div class="product-img">
+              <img class="w-100" src="/image/keyring/keyring_4.png" alt="">
+            </div>
+            <div class="card-body">
+            <h5 class="card-title">고양이와 물고기 원석 비즈 매듭끈 키링</h5>
+            <p class="card-text text-muted">₩6,300</p>
+            </div>
+        </div>
+      </div>
+    </div>
+    <div class="row g-4 text-center">
+      <p class="h6 view-more">
+        <a class="text-black-50" href="/components/store/keyring.html">View More</a>
+      </p>
+    </div>
+  </div>
+</section>
+
 <footer id="footer" class="py-4 text-center"></footer>
 
 <!-- Bootstrap JS -->
