이미지 첨부

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <img class="w-100" src="/image/bracelet/bracelet_2.png" alt="">
             </div>
             <div class="card-body">
-            <h5 class="card-title">12월 원석 탄생석 매듭팔찌</h5>
+            <h5 class="card-title">12월 원석 탄생석 심플 매듭 팔찌</h5>
             <p class="card-text text-muted">₩5,400</p>
             </div>
         </div>
@@ -177,7 +177,7 @@
               <img class="w-100" src="/image/keyring/keyring_3.png" alt="">
             </div>
             <div class="card-body">
-            <h5 class="card-title">바다 비즈 원석 매듭팔찌 비즈 팔찌</h5>
+            <h5 class="card-title">천사 키라키라 비즈 다꾸 폰꾸 키링</h5>
             <p class="card-text text-muted">₩8,400</p>
             </div>
         </div>
